Fixed issue with z-index on footer styling

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -14,7 +14,7 @@
     position: fixed;
     white-space: nowrap;
     width: 100%;
-    z-index: 1git st;
+    z-index: 1;
 }
 
 .footer-item {
